# sutan-game

./: .gitignore  CLAUDE.md  LICENSE  README.md  app_entry.py  array_report.txt  pyproject.toml  release.py  requirements.txt  scan_arrays.py  setup.py  skills-lock.json  sudan.code-workspace
.claude/: settings.json
_remap_temp/3496961707/: cards.json  over.json  tag.json  upgrade.json
_remap_temp/3514011697/: cards.json  upgrade.json
_remap_temp/3514011741/: cards.json  upgrade.json
docs/: JSON合并策略.md  architecture.md  changelog_v1.1.2_to_v1.2.0.md  config目录JSON文件规则.md  如何修改或新建一个仪式（rite）.md  如何修改或新建一个幕后（event）.md  如何创建mod.md  格式规则文件系统设计.md  用户使用手册.md
docs/offical/: 命令（动作）.md  如何修改和创建一个新的地图（game）.md  条件.md  (+9 more)
plans/: TODO.md  dynamic_key_report.txt  plans1.md
schemas/: _global.schema.json  achievement.schema.json  after_story.schema.json  cards.schema.json  credits.schema.json  dt.schema.json  event.schema.json  gallery_cards.schema.json  gallery_cg.schema.json  imagestyle.schema.json  init.schema.json  loot.schema.json  mobile_help.schema.json  over.schema.json  over_music_config.schema.json  quest.schema.json  rite.schema.json  rite_template.schema.json  rite_template_mappings.schema.json  sfx_config.schema.json  sfx_npc_role_dub.schema.json  sfx_settle_card_new.schema.json  smart_match_fields.json  tag.schema.json  template_map.json  textstyle.schema.json  ui.schema.json  upgrade.schema.json  variable.schema.json  wizard.schema.json
scripts/: generate_schemas.py
src/: config.py  main.py
tests/: __main__.py  test_core.py  test_perf.py  test_runner.py
(+172 files in other folders)
